2005-09-14  Andras Varga

	* cpolymorphic.h, cobject.h, etc: dup() moved up to cPolymorphic, and 
	return type changed to cPolymorphic. Once we drop MSVC 6.0 support,
	return types can be changed to class itself, i.e. in class Foo it can
	be defined as Foo *dup(). Unfortunately MSVC 6.0 doesn't support this.

	* cmodule.h, csimplemodule.h, ctypes.h, macros.h: signature of module
	constructors simplified, from
	    cModule(const char *name, cModule *parent) and
	    cSimpleModule(const char *name, cModule *parent, unsigned stack)
	to
	    cModule() and
	    cSimpleModule(unsigned stack=0)
	The purpose is to ease writing constructors, e.g. for a handleMessage()
	module class "PacketSink : public cSimpleModule", the constructor is
	just
	    PacketSink() {}
	instead of the former
	    PacketSink(const char *name, cModule *parent) :
	       cSimpleModule(name, parent, 0) {}

	Backwards compatibility: module classes using Module_Class_Members()
	(95%) are not affected. For module classes using hand-coded
	constructors, adding NULL as a default value to the "name" and "parent"
	ctor arguments will make the class work with both OMNeT++ 3.2 and
	earlier versions:
	    PacketSink(const char *name=NULL, cModule *parent=NULL) :
	       cSimpleModule(name, parent, 0) {}
	This affects very few modules, e.g. two in the current INET Framework
	release.

	Motivation: since cleanup-time garbage collection is off by default
	in OMNeT++ 3.2, users are encouraged to write proper destructors.
	However, destructors can only be written if constructors set pointer
	members of the class to NULL. (This is currently customarily done
	in the initialize() method; however, pointers must be initialized
	to NULL even if initialize() doesn't get called due to a runtime error
	earlier in another module's initialize(), otherwise the destructor will
	crash.) The Module_Class_Members() macro (currently used in 95% of
	the cases) defines an empty constructor, one cannot put statements