@@ -1,3 +1,8 @@
+2005-09-15  Andras Varga
+
+	* csimplemodule.h: added method cancelAndDelete(cMessage *msg), 
+	for use in simple module destructors.
+
 2005-09-14  Andras Varga
 
 	* cpolymorphic.h, cobject.h, etc: dup() moved up to cPolymorphic, and 
